# wselfedu-plw

./: .buildinfo  .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  api.html  changelogs.html  genindex.html  git.html  index.html  objects.inv  pages.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  tests.html
.github/actions/tested-app/: action.yml
.github/workflows/: playwright.yml  sphinx.yml  test-app-dj.yml  test-dj-docker-plw.yml  testing-app-changes-event.yml  web-app-changes-event.yml
_sources/: api.rst.txt  changelogs.rst.txt  index.rst.txt  tests.rst.txt
auth/: get_auth_state.py
db_con/: db.py
docs/source/: changelogs.rst  conf.py  git.rst  index.rst  pages.rst  tests.rst
docs/source/pages/: base.rst  home.rst  index.rst  user.rst  word.rst
docs/source/tests/: base.rst  home.rst  index.rst  user.rst
pages/: base_page.py  home.py  index.py  login.py  user.py  user_pages.py  word.py
src/tests/: test_index.py
tests/: base.py  test_index.py  test_login.py  test_user.py
tests/models/: index.py
